# air001-cmake-hal

./: .gitignore  .gitmodules  CMakeLists.txt  toolchain-arm-none-eabi.cmake
config/: air001xx_hal_conf.h
lib/: CMakeLists.txt
src/: main.cpp
